SLT_Handler/Include/MMC/MMCWFP39.h

/* In windows programs, there is no easy way to export its global variable,
* other than functions to other module referencing this DLL.*/
INT API get_mmc_error( VOID);
INT	API get_version( VOID);
INT	API get_axis_num( VOID);
INT	API get_bd_num( VOID);
INT	API get_velocity( INT);
INT API mmc_initx(INT, pLONG);
INT	API version_chk( INT, pINT);
INT API set_dpram_addr(INT, LONG);
INT API get_dpram_addr(INT, pLONG);
INT API save_boot_frame(VOID);
INT API mmc_axes(INT, pINT);
INT API mmc_all_axes(VOID);
INT API get_stepper(INT);
INT API set_stepper(INT);
INT API set_servo(INT);
INT API set_feedback(INT, INT);
INT API get_feedback(INT, pINT);
INT API set_closed_loop(INT, INT);
INT API get_closed_loop(INT, pINT);
INT API set_unipolar(INT, INT);
INT API get_unipolar(INT);
INT API set_abs_encoder(INT);
INT API get_micro_stepper(INT);
INT API set_micro_stepper(INT);
INT API mmcDelay(LONG);
INT API mmc_dwell(INT, LONG);
INT API mmc_io_trigger(INT,INT,INT);
INT API get_counter(INT, pDOUBLE);
INT API get_sync_position(pDOUBLE, pDOUBLE);
INT API set_position(INT, double);
INT API get_position(INT, pDOUBLE);
INT API set_command(INT, double);
INT API get_command(INT, pDOUBLE);
INT API get_error(INT, pDOUBLE);
INT API get_com_velocity(INT ax);
INT API get_act_velocity(INT ax);
INT API in_sequence(INT);
INT API in_motion(INT);
INT API in_position(INT);
INT API frames_left(INT);
INT API motion_done(INT);
INT API axis_done(INT);
INT API axis_state(INT);
INT API axis_source(INT);
LONG API axis_sourcex(INT);
INT API clear_status(INT);
INT API frames_clear(INT);
INT API map_axes( INT , pINT);
INT API set_move_speed(double);
INT API set_move_accel(INT);
INT API set_arc_division(double);
INT API all_done(VOID);
INT API move_2(double, double);
INT API move_3(double, double, double);
INT API move_4(double, double, double, double);
INT API move_n(pDOUBLE);
INT API move_2ax(INT,INT,double, double, double, INT);
INT API move_3ax(INT,INT,INT,double, double,double, double, INT);
INT API move_4ax(INT,INT,INT,INT,double, double, double,double, double, INT);
INT API move_nax(INT, pINT, pDOUBLE, double, INT);
INT API move_2axgr(INT,INT,INT,double, double, double, INT);
INT API move_3axgr(INT,INT,INT,INT,double, double,double, double, INT);
INT API move_4axgr(INT,INT,INT,INT,INT,double, double, double,double, double, INT);
INT API smove_2(double, double);
INT API smove_3(double, double, double);
INT API smove_4(double, double, double, double);
INT API smove_n(pDOUBLE);
INT API smove_2ax(INT,INT,double, double, double, INT);
INT API smove_3ax(INT,INT,INT,double, double, double, double, INT);
INT API smove_4ax(INT,INT,INT,INT,double, double, double, double, double, INT);
INT API smove_nax(INT, pINT, pDOUBLE, double, INT);
INT API smove_2axgr(INT,INT,INT,double, double, double, INT);
INT API smove_3axgr(INT,INT,INT,INT,double, double, double, double, INT);
INT API smove_4axgr(INT,INT,INT,INT,INT,double, double, double, double, double, INT);
INT API arc_2(double, double, double);
INT API arc_2ax(INT, INT, double, double , double, double, INT);
INT API spl_line_move2(pDOUBLE, double, INT);
INT API spl_line_move3(pDOUBLE, double, INT);
INT API spl_line_move2ax(INT,INT,pDOUBLE, double, INT);
INT API spl_line_move3ax(INT,INT,INT,pDOUBLE, double, INT);
INT API spl_arc_move2(double , double, pDOUBLE, double, INT, INT);
INT API spl_arc_move3(double , double, pDOUBLE, double, INT, INT);
INT API spl_arc_move2ax(INT,INT, double, double, pDOUBLE, double, INT, INT);
INT API spl_arc_move3ax(INT,INT,INT, double, double, pDOUBLE, double, INT, INT);
INT API spl_move(INT, INT, INT, INT, pDOUBLE, pDOUBLE, pDOUBLE, double, INT);
INT API rect_move(INT, INT, pDOUBLE, double, INT);