SLT_Handler/Include/MMC/MMCWFP39.pas

unit MMCWFP39;

interface

 function get_mmc_error         : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_version       : Longint       ;stdcall;   external    'MMCWFP39.DLL';
 function get_axis_num      : Smallint      ;stdcall;   external    'MMCWFP39.DLL';
 function get_bd_num        : Smallint      ;stdcall;   external    'MMCWFP39.DLL';
 function get_velocity    ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';


 function mmc_initx       ( nBdTatalNum : Smallint; arrlAddr : pointer)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function version_chk     ( bd : Smallint; iVer : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_dpram_addr      ( nBdNum : Smallint;  lAddr : Longint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_dpram_addr      ( nBdNum : Smallint; plAddr : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function save_boot_frame      : Smallint     ;stdcall;   external    'MMCWFP39.DLL';

 function mmc_axes    ( bd : Smallint; arriaxes : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function mmc_all_axes      : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_stepper     ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_stepper     ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_servo       ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_feedback    ( ax : Smallint;  iDev : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_feedback    ( ax : Smallint; piDev : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_closed_loop     ( ax : Smallint;  iloop : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_closed_loop     ( ax : Smallint; piloop : pointer )   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_unipolar    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_unipolar    ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function set_abs_encoder     ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_micro_stepper       ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function get_micro_stepper       ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function mmcDelay    ( l : Longint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function mmc_dwell       ( ax : Smallint;  l : Longint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function mmc_io_trigger      ( ax : Smallint;  nBitNo : Smallint;  nState : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function get_counter     ( ax : Smallint; pdCounter : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function get_sync_position       (pdPos_m : pointer; pdPos_s : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function set_position    ( ax : Smallint;  f : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_position    ( ax : Smallint; pdPos : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_command     ( ax : Smallint;  f : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_command     ( ax : Smallint; pdCommand : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function get_error       ( ax : Smallint; pdErr : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function get_com_velocity    ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function get_act_velocity    ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function in_sequence     ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function in_motion       ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function in_position     ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function frames_left     ( ax : Smallint)   : Smallint ;stdcall;   external    'MMCWFP39.DLL';
 function motion_done     ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function axis_done       ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function axis_state      ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function axis_source     ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function axis_sourcex    ( ax : Smallint)   : Longint   ;stdcall;   external    'MMCWFP39.DLL';
 function clear_status    ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function frames_clear    ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function map_axes    ( n_axes : Smallint; arripaxes : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function set_move_speed      ( speed : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function set_move_accel      ( accel : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function set_arc_division    ( dArc : Double)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function all_done     : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function move_2      ( X : Double;  Y : Double)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function move_3      ( X : Double;  Y : Double;  z : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function move_4      ( X : Double;  Y : Double;  z : Double;  w : Double)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function move_n      (arrdpos : pointer)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function move_2ax    ( ax1 : Smallint;  ax2 : Smallint;  X : Double;  Y : Double;  vel : Double;  acc : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function move_3ax    ( ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint;  X : Double;  Y : Double;  z : Double;  vel : Double;  acc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function move_4ax    ( ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint;  ax4 : Smallint;  X : Double;  Y : Double;  z : Double;  w : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function move_nax    ( axLen : Smallint; arriaxes : pointer; arrdpos : pointer;  vel : Double;  acc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function move_2axgr      ( gr : Smallint;  ax1 : Smallint;  ax2 : Smallint;  X : Double;  Y : Double;  vel : Double;  acc : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function move_3axgr      ( gr : Smallint;  ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint;  X : Double;  Y : Double;  z : Double;  vel : Double;  acc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function move_4axgr      ( gr : Smallint;  ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint;  ax4 : Smallint;  X : Double;  Y : Double;  z : Double;  w : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function smove_2     ( X : Double;  Y : Double)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function smove_3     ( X : Double;  Y : Double;  z : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function smove_4     ( X : Double;  Y : Double;  z : Double;  w : Double)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function smove_n     (arrdpos : pointer)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function smove_2ax       ( ax1 : Smallint;  ax2 : Smallint;  X : Double;  Y : Double;  vel : Double;  acc : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function smove_3ax       ( ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint;  X : Double;  Y : Double;  z : Double;  vel : Double;  acc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function smove_4ax       ( ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint;  ax4 : Smallint;  X : Double;  Y : Double;  z : Double;  w : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function smove_nax       ( axLen : Smallint; arriaxes : pointer; arrdpos : pointer;  vel : Double;  acc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function smove_2axgr     ( gr : Smallint;  ax1 : Smallint;  ax2 : Smallint;  X : Double;  Y : Double;  vel : Double;  acc : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function smove_3axgr     ( gr : Smallint;  ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint;  X : Double;  Y : Double;  z : Double;  vel : Double;  acc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function smove_4axgr     ( gr : Smallint;  ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint;  ax4 : Smallint;  X : Double;  Y : Double;  z : Double;  w : Double;  vel : Double;  acc : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function arc_2       ( xCenter : Double;  yCenter : Double;  angle : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function arc_2ax     ( ax1 : Smallint;  ax2 : Smallint;  x_center : Double;  y_center : Double;  angle : Double;  vel : Double;  acc : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function spl_line_move2      (arrdpntxy : pointer;  vel : Double;  acc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function spl_line_move3      (arrdpntxyz : pointer;  vel : Double;  acc : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function spl_line_move2ax    ( ax1 : Smallint;  ax2 : Smallint; arrdpntxy : pointer;  vel : Double;  acc : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function spl_line_move3ax    ( ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint; arrdpntxyz : pointer;  vel : Double;  acc : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';

 function spl_arc_move2       ( xc : Double;  yc : Double; arrdpntxy : pointer;  vel : Double;  acc : Smallint;  dir : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function spl_arc_move3       ( xc : Double;  yc : Double; arrdpntxyz : pointer;  vel : Double;  acc : Smallint;  dir : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function spl_arc_move2ax     ( ax1 : Smallint;  ax2 : Smallint;  xc : Double;  yc : Double; arrdpntxy : pointer;  vel : Double;  acc : Smallint;  dir : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function spl_arc_move3ax     ( ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint;  xc : Double;  yc : Double; arrdpntxyz : pointer;  vel : Double;  acc : Smallint;  dir : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function spl_move    ( n : Smallint;  ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint; arrdpntx : pointer; arrdpnty : pointer; arrdpntz : pointer;  vel : Double;  acc : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function rect_move       ( ax1 : Smallint;  ax2 : Smallint; arrdpntxy : pointer;  vel : Double;  acc : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function spl_auto_off    ( ax : Smallint;  mode : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
